# cpp-quickies

./: .gitignore  CMakeLists.txt  README.md
cmake/: project-config.cmake
src/advanced/: init-list.cpp
src/c++17/: nested-namespace.cpp
src/constructor/: CopyConstructor.cpp  DelegatingConstructor.cpp  Limitation.cpp  MoveConstructor.cpp  construction-order.hpp  constructor.cpp  constructor.map
src/gtest-example/: CMakeLists.txt
src/gtest-example/gmock/swami/: CMakeLists.txt
src/gtest-example/gmock/turtles/: CMakeLists.txt
src/gtest-example/gmock/turtles/mocks/: mock-turtle.hpp
src/gtest-example/gmock/turtles/tests/: painter.hpp  turtle-test.cpp
src/gtest-example/gmock/turtles/turtle/: turtle.hpp
src/gtest-example/gtest/: CMakeLists.txt
src/gtest-example/gtest/src/: math.h
src/gtest-example/src/: math.cpp
src/gtest-example/test/: mathtest.cpp
src/inheritance/: CMakeLists.txt  Person.cpp  Person.hpp  Tweeter.cpp  Tweeter.hpp  main.cpp  single-inheritance.cpp
src/lambda/: puzzle.cpp
src/memory-management/: CMakeLists.txt  Person.cpp  Person.hpp  Resource.cpp  Resource.hpp  SmartPerson.cpp  SmartPerson.hpp  main.cpp
src/misc/: const-cast.cpp
src/smart_pointers/: auto_ptr.cpp
src/threads/: CMakeLists.txt  account.cpp  account.h  heap-profiler.c  massif.out.61388  pthreads.cpp  std-threads-wrapper.cpp  std-threads.cpp  std-threads.hpp  thread-sync.cpp  valgring_helgrin_log.txt
